# MLB-Highlighter

./: README.md  dev.sh
client/: eslint.config.js  index.html  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.css
client/src/api/: client.ts  endpoints.ts  gameService.ts  queryService.ts  sseService.ts
client/src/components/: FilterDisplay.tsx  GameCard.tsx  GameFilters.tsx  InputBox.tsx  MLBMerger.tsx  NavBar.tsx  RequestStatus.tsx  SearchForm.tsx  StatusUpdate.tsx  ToggleSwitch.tsx  VideoDisplay.tsx  VideoPlaylist.tsx
client/src/pages/: GameSearch.tsx  Search.tsx
client/src/types/: api.ts
server/: .gitignore  Dockerfile  custom_models.py  limiter.py  main.py  pyproject.toml
server/context/: examples.json  examples.md  mappings.json  mappings.md
server/models/: __init__.py  custom_models.py  game.py  job.py  query.py  responses.py  savant_filters.py  schemas.py
server/routers/: game.py  testing.py  video.py  video_testing.py
server/services/: GameService.py  JobStore.py  SavantMerger.py  SavantQuery.py  SavantScraper.py  VideoMetadata.py  background_tasks.py  database.py
server/utils/: cleanup.py  helpers.py
